# TUM_HOly

./: .gitignore  .gitmodules  2015-07-01-20-59-33.bag  LICENSE.txt  README.md  resetcompliance_stairs.sh
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: build.1429563384402.pdom
.metadata/.plugins/org.eclipse.cdt.make.core/: build.sc
.metadata/.plugins/org.eclipse.core.resources/: 4.snap
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
ics_bioloid/launch/: bioloid_TypeA_para.launch  bioloid_interface.launch  bioloid_robot_description.launch
launch/: parameter_spreadsheet.ods  readme.txt
openrave/plugins/: CMakeLists.txt
openrave/python/bindings/: convexdecompositionpy.cpp  pyann.cpp
openrave/src/cppexamples/: orloadviewer.cpp
scripts/: setcompliance.sh  setspeed.sh
src/: bioloid_interface.cpp
src/awesome-o_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/awesome-o_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml
src/awesome-o_moveit_config/launch/: awesome-o_moveit_controller_manager.launch.xml  controller_rviz.launch  move_group.launch  moveit.rviz  sensor_manager.launch.xml  trajectory_execution.launch.xml
src/bioloid_interface/: CMakeLists.txt  package.xml
src/bioloid_interface/cmake/: bioloid_interface-genmsg-context.py  bioloid_interface-genmsg.cmake
src/bioloid_interface/include/: dynamixel.c
src/bioloid_interface/launch/: bioloid_TypeA_para.launch  bioloid_TypeA_para.launch~  bioloid_interface.launch
src/bioloid_interface/msg/: bioloid_msg.msg
src/bioloid_interface/urdf/: 2015-04-27-14-05-16.bag  TypeA.urdf.xacro
src/build-holy-Desktop-Default/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  holy.cbp
src/build-holy-Desktop-Default/catkin_generated/: generate_cached_setup.py  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
src/build-holy-Desktop-Default/devel/: .rosinstall  setup.sh
src/build-holy-Desktop-Default/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
src/holy/: .~lock.positions.csv#  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  holy.cbp  package.xml  positions.csv  setcompliance.sh
src/holy/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  setup_cached.sh
src/holy/catkin_generated/installspace/: holy.pc  holyConfig.cmake
src/holy/devel/: .catkin  .rosinstall  setup.sh
src/holy/devel/lib/holy/: walk  wave
src/holy/devel/lib/pkgconfig/: holy.pc
src/holy/devel/share/holy/cmake/: holyConfig.cmake
src/holy/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
src/holy/launch/: holy.launch  init_holy (copy).launch~  init_holy.launch  walk.launch  walk.launch~
src/holy/rosbag/: 2015-04-27-14-16-42.bag  2015-04-27-14-18-44.bag  2015-04-27-14-21-10.bag  2015-04-27-14-23-41.bag  2015-04-27-14-25-22.bag  2015-04-27-14-25-26.bag  2015-04-27-14-29-46.bag  2015-04-27-14-34-53.bag  2015-04-27-14-37-11.bag  2015-04-27-14-41-48.bag  2015-04-27-14-46-51.bag  2015-07-01-21-00-29.bag  pushup.bag
src/holy/scripts/: timed_roslaunch.sh
src/holy/src/: core.cpp  core.cpp.autosave  core.h  fight.cpp  fight.h  gestures.cpp  gestures.hpp  holy_fsm_defines.h  holy_main.cpp  holy_main.h  kinect.cpp  kinect.h  moveit.cpp  poses.cpp  poses.cpp.autosave  poses.h  stairs.cpp  stairs.h  test.cpp  walk.cpp  walk.h  walk_main.cpp  walk_main.cpp.autosave  wave.cpp
src/holy/src/CSV/: csviterator.cpp  csviterator.h  csvrow.cpp  csvrow.h
src/holy/src/core/: core.cpp  core.h  helper.cpp  helper.h  motors.cpp  motors.h
src/holy/src/fsm/: fight.cpp  fight.h  stairs.cpp  stairs.h  stairs.h.autosave  walk.cpp  walk.h
src/holy/src/poses/: limbpose.cpp  limbpose.h  parser.cpp  parser.h  poses.cpp  poses.h  robopose.cpp  robopose.h
src/holy_cog/: CMakeLists.txt  package.xml
src/holy_cog/src/: cog.cpp
src/holy_controllers/: holy_controller.yaml  holy_controller.yaml~  holy_controller_mod.yaml  mainpage.dox  manifest.xml
src/holy_controllers/launch/: holy_manager.launch  holy_manager.launch~  init_controller.launch  init_controller.launch~  init_tf_transform.launch  start_controller.launch  start_controller.launch~
src/holy_controllers/scripts/: holy_joint_state_publisher.py  holy_joint_state_publisher.py~
src/holy_controllers/urdf/: TypeA.urdf.xacro  holy.dae  holy.urdf  holy_rounded.dae
src/holy_ik_fast/: CMakeLists.txt  awesome-o_LeftLeg_moveit_ikfast_plugin_description.xml  awesome-o_RightLeg_moveit_ikfast_plugin_description.xml  package.xml
src/holy_ik_fast/src/: awesome-o_LeftLeg_ikfast_solver.cpp  awesome-o_RightLeg_ikfast_moveit_plugin.cpp  awesome-o_RightLeg_ikfast_solver.cpp
src/holy_ik_fast_LeftLeg/: CMakeLists.txt  holy_LeftLeg_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
src/holy_ik_fast_LeftLeg/src/: awesome-o_LeftLeg_ikfast_moveit_plugin.cpp
src/holy_ik_fast_la/: CMakeLists.txt  awesome-o_LeftArm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
src/holy_ik_fast_la/src/: awesome-o_LeftArm_ikfast_moveit_plugin.cpp  awesome-o_LeftArm_ikfast_solver.cpp
src/holy_ik_fast_ll/: CMakeLists.txt  awesome-o_LeftLeg_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
src/holy_ik_fast_ll/src/: awesome-o_LeftLeg_ikfast_moveit_plugin.cpp  awesome-o_LeftLeg_ikfast_solver.cpp
src/holy_ik_fast_ra/: CMakeLists.txt  awesome-o_RightArm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
src/holy_ik_fast_ra/src/: awesome-o_RightArm_ikfast_moveit_plugin.cpp  awesome-o_RightArm_ikfast_solver.cpp
src/holy_ik_fast_rl/: CMakeLists.txt  awesome-o_RightLeg_moveit_ikfast_plugin_description.xml  ikfast61_RightLeg.cpp  package.xml  update_ikfast_plugin.sh
src/holy_ik_fast_rl/src/: awesome-o_RightLeg_ikfast_moveit_plugin.cpp  (+1 more)
src/moveit_config/: .setup_assistant  package.xml
(+43 files in other folders)
