<?xml version="1.0"?>
<package>
  <name>bioloid_interface</name>
  <version>0.0.0</version>
  <description>The bioloid_interface package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="bioloid@todo.todo">bioloid</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>bioloid_msg</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_depend>message_generation</build_depend>


  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>bioloid_msg</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
